src/decimill/parser/ScenarioParser.java
// Generated from ScenarioParser.g4 by ANTLR 4.4

    package decimill.parser;
    import decimill.*;
    import decimill.expression.*;
    import decimill.scenario.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ScenarioParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		InlineStart=1, BlockStart=2, EOL=3, Character=4, Word=5, Text=6, ID=7, 
		Int=8, Dbl=9, Procent=10, Allowed=11, Str=12, Dot=13, Colon=14, Comma=15, 
		Quote=16, FromTo=17, Refinement=18, Equals=19, PlusEq=20, MinusEq=21, 
		TimesEq=22, DivEq=23, Plus=24, Minus=25, Times=26, Div=27, Power=28, LowerThan=29, 
		GreaterThan=30, IsEqual=31, LBracket=32, RBracket=33, UBracket=34, LParent=35, 
		RParent=36, LCurly=37, RCurly=38, InlineEnd=39, BlockEnd=40, WS=41, BNL=42, 
		ERR=43;
	public static final String[] tokenNames = {
		"<INVALID>", "InlineStart", "BlockStart", "EOL", "Character", "Word", 
		"Text", "ID", "Int", "Dbl", "Procent", "Allowed", "Str", "Dot", "Colon", 
		"Comma", "Quote", "FromTo", "Refinement", "Equals", "PlusEq", "MinusEq", 
		"TimesEq", "DivEq", "Plus", "Minus", "Times", "Div", "Power", "LowerThan", 
		"GreaterThan", "IsEqual", "LBracket", "RBracket", "UBracket", "LParent", 
		"RParent", "LCurly", "RCurly", "InlineEnd", "BlockEnd", "WS", "BNL", "ERR"
	};
	public static final int
		RULE_parse = 0, RULE_element = 1, RULE_str = 2, RULE_inlineCode = 3, RULE_blockCode = 4, 
		RULE_name = 5, RULE_namespace = 6, RULE_change = 7, RULE_assignment = 8, 
		RULE_expression = 9, RULE_expr_add = 10, RULE_expr_sub = 11, RULE_expr_mult = 12, 
		RULE_expr_div = 13, RULE_expr_pow = 14, RULE_expr_lt = 15, RULE_expr_gt = 16, 
		RULE_expr_eq = 17, RULE_expr_atom = 18, RULE_variable = 19, RULE_reference = 20, 
		RULE_function = 21, RULE_constant = 22, RULE_array = 23, RULE_assoc_array = 24, 
		RULE_num_int = 25, RULE_num_double = 26, RULE_num_procent = 27, RULE_dist = 28, 
		RULE_val = 29;
	public static final String[] ruleNames = {
		"parse", "element", "str", "inlineCode", "blockCode", "name", "namespace", 
		"change", "assignment", "expression", "expr_add", "expr_sub", "expr_mult", 
		"expr_div", "expr_pow", "expr_lt", "expr_gt", "expr_eq", "expr_atom", 
		"variable", "reference", "function", "constant", "array", "assoc_array", 
		"num_int", "num_double", "num_procent", "dist", "val"
	};

	@Override
	public String getGrammarFileName() { return "ScenarioParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    Scenario scenario;

	public ScenarioParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public Scenario s;
		public TerminalNode EOF() { return getToken(ScenarioParser.EOF, 0); }
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ParseContext(ParserRuleContext parent, int invokingState, Scenario s) {
			super(parent, invokingState);
			this.s = s;
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).exitParse(this);
		}
	}

	public final ParseContext parse(Scenario s) throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState(), s);
		enterRule(_localctx, 0, RULE_parse);

		        scenario = s;
		    
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(60); element();
				}
				}
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << InlineStart) | (1L << BlockStart) | (1L << Character))) != 0) );
			setState(65); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ScenarioParser.EOF, 0); }
		public StrContext str(int i) {
			return getRuleContext(StrContext.class,i);
		}
		public TerminalNode InlineEnd() { return getToken(ScenarioParser.InlineEnd, 0); }
		public List<StrContext> str() {
			return getRuleContexts(StrContext.class);
		}
		public InlineCodeContext inlineCode() {
			return getRuleContext(InlineCodeContext.class,0);
		}
		public TerminalNode BlockStart() { return getToken(ScenarioParser.BlockStart, 0); }
		public BlockCodeContext blockCode() {
			return getRuleContext(BlockCodeContext.class,0);
		}
		public TerminalNode BlockEnd() { return getToken(ScenarioParser.BlockEnd, 0); }
		public TerminalNode InlineStart() { return getToken(ScenarioParser.InlineStart, 0); }
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).exitElement(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_element);
		int _la;
		try {
			int _alt;
			setState(80);
			switch (_input.LA(1)) {
			case Character:
				enterOuterAlt(_localctx, 1);
				{
				setState(68); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(67); str();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(70); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case InlineStart:
				enterOuterAlt(_localctx, 2);
				{
				setState(72); match(InlineStart);
				setState(73); inlineCode();
				setState(74); match(InlineEnd);
				}
				break;
			case BlockStart:
				enterOuterAlt(_localctx, 3);
				{
				setState(76); match(BlockStart);
				setState(77); blockCode();
				setState(78);
				_la = _input.LA(1);
				if ( !(_la==EOF || _la==BlockEnd) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrContext extends ParserRuleContext {
		public TerminalNode EOL() { return getToken(ScenarioParser.EOL, 0); }
		public List<TerminalNode> Character() { return getTokens(ScenarioParser.Character); }
		public TerminalNode Character(int i) {
			return getToken(ScenarioParser.Character, i);
		}
		public StrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_str; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).enterStr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).exitStr(this);
		}
	}

	public final StrContext str() throws RecognitionException {
		StrContext _localctx = new StrContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_str);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(83); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(82); match(Character);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(85); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(88);
			_la = _input.LA(1);
			if (_la==EOL) {
				{
				setState(87); match(EOL);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InlineCodeContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ChangeContext change() {
			return getRuleContext(ChangeContext.class,0);
		}
		public InlineCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inlineCode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).enterInlineCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).exitInlineCode(this);
		}
	}

	public final InlineCodeContext inlineCode() throws RecognitionException {
		InlineCodeContext _localctx = new InlineCodeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_inlineCode);
		try {
			setState(92);
			switch (_input.LA(1)) {
			case Word:
				enterOuterAlt(_localctx, 1);
				{
				setState(90); change();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(91); assignment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockCodeContext extends ParserRuleContext {
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public ChangeContext change(int i) {
			return getRuleContext(ChangeContext.class,i);
		}
		public List<ChangeContext> change() {
			return getRuleContexts(ChangeContext.class);
		}
		public BlockCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockCode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).enterBlockCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).exitBlockCode(this);
		}
	}

	public final BlockCodeContext blockCode() throws RecognitionException {
		BlockCodeContext _localctx = new BlockCodeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_blockCode);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(96);
				switch (_input.LA(1)) {
				case Word:
					{
					setState(94); change();
					}
					break;
				case ID:
					{
					setState(95); assignment();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(98); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Word || _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode Text() { return getToken(ScenarioParser.Text, 0); }
		public TerminalNode Word() { return getToken(ScenarioParser.Word, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).exitName(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_la = _input.LA(1);
			if ( !(_la==Word || _la==Text) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamespaceContext extends ParserRuleContext {
		public TerminalNode Word() { return getToken(ScenarioParser.Word, 0); }
		public NamespaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespace; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).enterNamespace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).exitNamespace(this);
		}
	}

	public final NamespaceContext namespace() throws RecognitionException {
		NamespaceContext _localctx = new NamespaceContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_namespace);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102); match(Word);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChangeContext extends ParserRuleContext {
		public ReferenceContext reference;
		public ExpressionContext expression;
		public TerminalNode PlusEq() { return getToken(ScenarioParser.PlusEq, 0); }
		public TerminalNode TimesEq() { return getToken(ScenarioParser.TimesEq, 0); }
		public TerminalNode MinusEq() { return getToken(ScenarioParser.MinusEq, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode DivEq() { return getToken(ScenarioParser.DivEq, 0); }
		public TerminalNode Equals() { return getToken(ScenarioParser.Equals, 0); }
		public ReferenceContext reference() {
			return getRuleContext(ReferenceContext.class,0);
		}
		public ChangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_change; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).enterChange(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).exitChange(this);
		}
	}

	public final ChangeContext change() throws RecognitionException {
		ChangeContext _localctx = new ChangeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_change);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104); ((ChangeContext)_localctx).reference = reference();
			setState(125);
			switch (_input.LA(1)) {
			case Equals:
				{
				setState(105); match(Equals);
				setState(106); ((ChangeContext)_localctx).expression = expression();
				 scenario.addChange(((ChangeContext)_localctx).reference.node.toReference(), ((ChangeContext)_localctx).expression.node); 
				}
				break;
			case PlusEq:
				{
				setState(109); match(PlusEq);
				setState(110); ((ChangeContext)_localctx).expression = expression();
				 scenario.addChange(((ChangeContext)_localctx).reference.node.toReference(), new PlusNode(((ChangeContext)_localctx).reference.node, ((ChangeContext)_localctx).expression.node)); 
				}
				break;
			case MinusEq:
				{
				setState(113); match(MinusEq);
				setState(114); ((ChangeContext)_localctx).expression = expression();
				 scenario.addChange(((ChangeContext)_localctx).reference.node.toReference(), new MinusNode(((ChangeContext)_localctx).reference.node, ((ChangeContext)_localctx).expression.node)); 
				}
				break;
			case TimesEq:
				{
				setState(117); match(TimesEq);
				setState(118); ((ChangeContext)_localctx).expression = expression();
				 scenario.addChange(((ChangeContext)_localctx).reference.node.toReference(), new TimesNode(((ChangeContext)_localctx).reference.node, ((ChangeContext)_localctx).expression.node)); 
				}
				break;
			case DivEq:
				{
				setState(121); match(DivEq);
				setState(122); ((ChangeContext)_localctx).expression = expression();
				 scenario.addChange(((ChangeContext)_localctx).reference.node.toReference(), new DivNode(((ChangeContext)_localctx).reference.node, ((ChangeContext)_localctx).expression.node)); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public VariableContext variable;
		public ExpressionContext expression;
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode Equals() { return getToken(ScenarioParser.Equals, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127); ((AssignmentContext)_localctx).variable = variable();
			setState(128); match(Equals);
			setState(129); ((AssignmentContext)_localctx).expression = expression();
			 scenario.assign((((AssignmentContext)_localctx).variable!=null?_input.getText(((AssignmentContext)_localctx).variable.start,((AssignmentContext)_localctx).variable.stop):null), ((AssignmentContext)_localctx).expression.node); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExprNode node;
		public Expr_addContext expr_add;
		public Expr_addContext expr_add() {
			return getRuleContext(Expr_addContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132); ((ExpressionContext)_localctx).expr_add = expr_add();
			 ((ExpressionContext)_localctx).node =  ((ExpressionContext)_localctx).expr_add.node; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_addContext extends ParserRuleContext {
		public ExprNode node;
		public Expr_subContext expr_sub;
		public TerminalNode Plus(int i) {
			return getToken(ScenarioParser.Plus, i);
		}
		public List<TerminalNode> Plus() { return getTokens(ScenarioParser.Plus); }
		public Expr_subContext expr_sub(int i) {
			return getRuleContext(Expr_subContext.class,i);
		}
		public List<Expr_subContext> expr_sub() {
			return getRuleContexts(Expr_subContext.class);
		}
		public Expr_addContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_add; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).enterExpr_add(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).exitExpr_add(this);
		}
	}

	public final Expr_addContext expr_add() throws RecognitionException {
		Expr_addContext _localctx = new Expr_addContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_expr_add);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135); ((Expr_addContext)_localctx).expr_sub = expr_sub();
			 ((Expr_addContext)_localctx).node =  ((Expr_addContext)_localctx).expr_sub.node; 
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Plus) {
				{
				{
				setState(137); match(Plus);
				setState(138); ((Expr_addContext)_localctx).expr_sub = expr_sub();
				 ((Expr_addContext)_localctx).node =  new PlusNode(_localctx.node, ((Expr_addContext)_localctx).expr_sub.node); 
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expr_subContext extends ParserRuleContext {
		public ExprNode node;
		public Expr_multContext expr_mult;
		public TerminalNode Minus(int i) {
			return getToken(ScenarioParser.Minus, i);
		}
		public List<Expr_multContext> expr_mult() {
			return getRuleContexts(Expr_multContext.class);
		}
		public Expr_multContext expr_mult(int i) {
			return getRuleContext(Expr_multContext.class,i);
		}
		public List<TerminalNode> Minus() { return getTokens(ScenarioParser.Minus); }
		public Expr_subContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr_sub; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).enterExpr_sub(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScenarioParserListener ) ((ScenarioParserListener)listener).exitExpr_sub(this);
		}
	}

	public final Expr_subContext expr_sub() throws RecognitionException {
		Expr_subContext _localctx = new Expr_subContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_expr_sub);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146); ((Expr_subContext)_localctx).expr_mult = expr_mult();
			 ((Expr_subContext)_localctx).node =  ((Expr_subContext)_localctx).expr_mult.node; 
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Minus) {
				{
				{
				setState(148); match(Minus);
				setState(149); ((Expr_subContext)_localctx).expr_mult = expr_mult();
				 ((Expr_subContext)_localctx).node =  new MinusNode(_localctx.node, ((Expr_subContext)_localctx).expr_mult.node); 
				}
				}
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
